<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    tools:context=".AddTaskActivity">
    <LinearLayout
        android:id="@+id/ln_reward"
        android:layout_width="match_parent"
        android:layout_height="70dp"
        android:weightSum="6"
        android:background="@color/colorSky">
        <ImageView
            android:id="@+id/left_arrow_icon"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="match_parent"
            android:padding="20dp"
            android:src="@drawable/back" />
        <TextView
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="5"
            android:text="@string/add_task"
            android:textSize="22sp"
            android:gravity="center_vertical"
            android:textColor="@color/white"/>
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:weightSum="7.5"
        android:gravity="center"
        android:layout_marginLeft="25dp"
        android:layout_marginRight="25dp"
        android:layout_marginTop="20dp"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:textAlignment="center"
            android:textSize="20dp"
            android:textStyle="bold"
            android:text="@string/task_detail"
            android:textColor="@color/theme_color"
            />
        <EditText
            android:id="@+id/et_taskname"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:hint="@string/task_name"/>
        <EditText
            android:id="@+id/et_taskdesp"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginTop="20dp"
            android:textSize="16dp"
            android:textColor="@color/black"
            android:hint="@string/description_to"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:layout_weight="1.5">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_weight="1"
                android:weightSum="2"
                android:gravity="center"
                android:layout_height="match_parent">
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="30dp"
                    android:layout_weight=".4"
                    android:layout_marginLeft="15dp"
                    android:src="@drawable/calander"
                    android:tint="@color/theme_color"
                    />
                <TextView
                    android:id="@+id/tv_todo_date"
                    android:layout_width="0dp"
                    android:layout_weight="1.6"
                    android:layout_height="wrap_content"
                    android:text="@string/date"
                    android:textSize="16dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:weightSum="2"
                android:gravity="center"
                android:layout_marginLeft="10dp" >
                <ImageView
                    android:layout_width="0dp"
                    android:layout_height="26dp"
                    android:layout_weight=".4"
                    android:src="@drawable/clock"
                    android:layout_marginLeft="15dp"
                    android:tint="@color/theme_color"/>
                <TextView
                    android:id="@+id/tv_todo_time"
                    android:layout_width="0dp"
                    android:layout_weight="1.6"
                    android:layout_height="wrap_content"
                    android:text="@string/time"
                    android:textSize="16dp"
                    android:paddingLeft="10dp"
                    android:textColor="@color/black"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_todo_submit"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:background="@drawable/button_corner_sky"
            android:text="@string/submit"
            android:textSize="20dp"
            android:layout_margin="16dp"
            android:textColor="@color/white"/>

        <android.support.v7.widget.SwitchCompat
            android:id="@+id/switchButton"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/reminder"
            android:gravity="right"
            android:layout_marginTop="30dp"
            android:layout_marginBottom="30dp"
            android:paddingTop="4dp"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:textColor="@color/black"
            />
    </LinearLayout>
</LinearLayout>
