<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/theme_color"
            android:textSize="16dp"
            android:paddingLeft="5dp"
            android:text="@string/previous_meter_reading"
            android:layout_marginTop="15dp" />
        <EditText
            android:id="@+id/edt_previous_meter_reading"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:inputType="number"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:background="@drawable/edt_bg"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/theme_color"
            android:textSize="16dp"
            android:paddingLeft="5dp"
            android:text="@string/latest_meter_reading"
            android:layout_marginTop="15dp"
            />
        <EditText
            android:id="@+id/edt_latest_meter_reading"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="number"
            android:background="@drawable/edt_bg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/theme_color"
            android:textSize="16dp"
            android:paddingLeft="5dp"
            android:text="@string/cost_per_kwh"
            android:layout_marginTop="15dp"
            />
        <EditText
            android:id="@+id/edt_cost_per_kwh"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="numberDecimal"
            android:background="@drawable/edt_bg"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="20dp"
            android:textColor="@color/theme_color"
            android:textSize="16dp"
            android:paddingLeft="5dp"
            android:text="@string/standing_charges_per_day"
            android:layout_marginTop="15dp"
            />
        <EditText
            android:id="@+id/edt_standing_charges"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:paddingLeft="10dp"
            android:paddingRight="10dp"
            android:inputType="numberDecimal"
            android:background="@drawable/edt_bg"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:weightSum="2"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:weightSum="5"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/days"
                    android:paddingLeft="5dp"
                    android:textColor="@color/theme_color"
                    android:textSize="16dp" />
                <EditText
                    android:id="@+id/edt_days"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:inputType="number"
                    android:background="@drawable/edt_bg"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="80dp"
                android:weightSum="5"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_weight="1">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:text="@string/vat"
                    android:paddingLeft="5dp"
                    android:textColor="@color/theme_color"
                    android:textSize="16dp" />
                <EditText
                    android:id="@+id/edt_vat"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_weight="3"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:inputType="numberDecimal"
                    android:background="@drawable/edt_bg"/>
            </LinearLayout>
        </LinearLayout>
        <Button
            android:id="@+id/btn_calculate"
            android:layout_width="match_parent"
            android:layout_height="50dp"
            android:text="@string/calculate"
            android:textSize="18dp"
            android:background="@color/theme_color"
            android:textColor="@color/white"
            android:layout_marginTop="15dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:weightSum="3"
            android:layout_marginTop="15dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textColor="@color/theme_color"
                    android:textSize="16dp"
                    android:paddingLeft="5dp"
                    android:text="@string/total_kwh" />
                <TextView
                    android:id="@+id/edt_total_kwh"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/edt_bg"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="15dp"
                android:layout_weight="2">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textColor="@color/theme_color"
                    android:textSize="16dp"
                    android:paddingLeft="5dp"
                    android:text="@string/total_standing_charges"
                    />
                <TextView
                    android:id="@+id/edt_total_standing_charges"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/edt_bg"
                    android:gravity="center"/>
            </LinearLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:weightSum="2"
            android:layout_marginTop="10dp"
            android:layout_marginBottom="20dp"
            android:orientation="horizontal">
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textColor="@color/theme_color"
                    android:textSize="16dp"
                    android:paddingLeft="5dp"
                    android:text="@string/vat_total"
                    />

                <TextView
                    android:id="@+id/edt_total_vat"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:background="@drawable/edt_bg"
                    android:gravity="center"/>
            </LinearLayout>
            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginLeft="30dp"
                android:layout_weight="1">
                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="20dp"
                    android:textColor="@color/theme_color"
                    android:textSize="16dp"
                    android:paddingLeft="5dp"
                    android:text="@string/total" />
                <TextView
                    android:id="@+id/edt_total_charges"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="5dp"
                    android:paddingLeft="10dp"
                    android:paddingRight="10dp"
                    android:gravity="center"
                    android:background="@drawable/edt_bg"/>
            </LinearLayout>
        </LinearLayout>
    </LinearLayout>
</ScrollView>