<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        card_view:cardElevation="5dp"
        card_view:contentPadding="5dp"
        card_view:cardCornerRadius="5dp"
        card_view:cardMaxElevation="5dp"
        card_view:cardUseCompatPadding="true">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <ImageView
                android:id="@+id/img_recipe"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:scaleType="fitXY"
                android:src="@drawable/recipe"/>
            <TextView
                android:id="@+id/recipe_content"
                android:layout_width="match_parent"
                android:layout_height="28dp"
                android:layout_below="@+id/img_recipe"
                android:layout_margin="8dp"
                android:text="@string/recipe_summary"
                android:textColor="@color/black"
                android:textSize="16sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="50dp"
                android:layout_below="@+id/recipe_content"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                android:weightSum="4">
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/proteins"
                        android:textColor="@color/colorSky"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_recipe_item_protein"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="--"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:layout_marginLeft="3dp"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/calories"
                        android:textColor="@color/colorSky"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_recipe_item_calory"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="--"
                        android:textSize="14sp" />
                </LinearLayout>
                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">
                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/fat"
                        android:textColor="@color/colorSky"
                        android:textSize="14sp" />
                    <TextView
                        android:id="@+id/tv_recipe_item_fat"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="--"
                        android:textSize="14sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="@string/carbs"
                        android:textColor="@color/colorSky"
                        android:textSize="14sp" />

                    <TextView
                        android:id="@+id/tv_recipe_item_carb"
                        android:layout_width="match_parent"
                        android:layout_height="25dp"
                        android:gravity="center"
                        android:text="--"
                        android:textSize="14sp" />
                </LinearLayout>
            </LinearLayout>
        </RelativeLayout>
    </android.support.v7.widget.CardView>
</LinearLayout>